feat: enhance PluginEntity and VBookPluginService for improved plugin management and directory handling